Fix: legibility
Feat: netlify forms

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -76,7 +76,7 @@
     }
 
     .desc-text {
-        @apply font-body text-grokBlack-500 font-light;
+        @apply font-body text-grokBlack-500;
     }
 
     .responsive-px {
